--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 	<link rel="icon" href="./images/favicon (1).ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> 
-    <title>SVCE</title>
+    <title>SVCE feature-1</title>
     <body>
     
     <div class="nav-container">
